infrastructure/prod/patches/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: spezistudyplatform
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: keycloak
