infrastructure/prod/patches/auth-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-ingress
  namespace: spezistudyplatform
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  routes:
    - match: "Host(`platform.spezi.stanford.edu`) && PathPrefix(`/auth`)"
